# sim-fold-ipc

./: .gitignore  C_IPC_Warp_Implementation_Plan.md  README.md  main.py  pyproject.toml
reports/: report.md
scripts/: demo_navigation.py  render_meshes.py  render_week1.py
sim_fold_ipc/: __init__.py  barrier.py  device.py  elastic_pos.py  elasticity.py  meshes.py  navigate.py  render.py  rod.py  solver.py  solver_pos.py
tests/: test_meshes.py  test_navigation.py  test_rod_freespace.py
