[project]
name = "sim-fold-ipc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pillow>=12.3.0",
    "scipy>=1.17.1",
    "warp-lang>=1.15.0",
]
